# open-calc

./: .gitignore  CMakeLists.txt  README.md
include/acceleration/: metal_interface.hpp
include/computation/: complex_calculator.hpp  matrix_calculator.hpp  standard_calculator.hpp
include/parser/: expression_parser.hpp
include/ui/: calculator_ui.hpp
src/: main.cpp
